--- a/MVC/views/index.jade
+++ b/MVC/views/index.jade
@@ -4,7 +4,7 @@ html
   head
     meta(charset='UTF-8')
     | &#x9;
-    title index
+    title= title
   body
     button(type='submit')  connexion 
 
